--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -101,7 +101,7 @@ $teamListGap: 8px;
   &__button {
     background-repeat: no-repeat;
     background-position: center;
-    display: block;
+    display: flex;
     height: 32px;
     width: 32px;
 
@@ -109,8 +109,24 @@ $teamListGap: 8px;
       background-image: url('/images/header/header-phone--mobile.png');
     }
 
+    &--email {
+      width: max-content;
+      background-image: url('/images/icons/email.svg');
+      background-position: left center;
+
+      & span {
+        display: none;
+        @include onDesktop {
+          display: flex;
+          align-items: center;
+          color: #eccb80;
+          padding: 0 0 0 32px;
+        }
+      }
+    }
+
     &--burger-menu {
-      background-image: url('/images/header/header-burger--mobile.png');
+      background-image: url('/images/header/header-burger--mobile.svg');
 
       @include onDesktop {
         display: none;
