--- a/src/components/MentalState/MentalState.scss
+++ b/src/components/MentalState/MentalState.scss
@@ -7,9 +7,8 @@
     flex-direction: column;
 
     @include onTablet--m {
-      flex-direction: row;
       justify-content: center;
-      align-items: stretch;
+      align-items: center;
     }
 
     @include onDesktop {
@@ -19,15 +18,55 @@
     }
   }
 
+  &__item-description {
+    border-radius: 24px;
+    padding: 24px;
+    background-color: $colorBeige;
+    display: flex;
+    align-items: center;
+
+    text-align: center;
+    font-size: 24px;
+    line-height: 1.5;
+    font-weight: 500;
+
+    color: $colorDarkGreen;
+
+    @include onDesktop {
+      justify-content: center;
+      font-size: 30px;
+    }
+
+    @include onDesktop {
+      justify-content: center;
+      font-size: 30px;
+    }
+
+    &--last {
+      flex-direction: column;
+      font-size: 18px;
+
+      @include onTablet--m {
+        font-size: 18px;
+      }
+
+      @include onDesktop {
+        font-size: 24px;
+      }
+
+      & span {
+        font-weight: 700;
+      }
+    }
+  };
+
   &__list-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: stretch;
   }
 
   &__list {
-
     margin: 0 0 24px;
 
     display: flex;
@@ -133,12 +172,18 @@
 
   &__girls-images {
     justify-content: center;
-    align-items: center;
+
+    @include onTablet--m {
+      flex-wrap: nowrap;
+    }
+    @include onDesktop {
+      gap: 40px;
+    }
   }
 
   &__girls-images--swap-images > :last-child {
+    order: -1;
     @include onDesktop{
-      order: -1;
     }
   }
 }
