--- a/src/components/AboutUC/AboutUC.scss
+++ b/src/components/AboutUC/AboutUC.scss
@@ -5,8 +5,11 @@
   position: relative;
   &__description {
     font-size: 24px;
+    line-height: 1.5;
     font-weight: 400;
     margin: 0;
+
+    text-align: center;
 
     & span {
       font-weight: 700;
