--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -36,7 +36,6 @@
       @include onTablet--s {
         display: block;
         bottom: 0;
-        // right: 0;
       }
     }
 
@@ -46,10 +45,14 @@
     }
 
     @include onTablet--s {
-      height: 360px;
+
       width: 100%;
       order: 1;
       background-size: contain;
+    }
+
+    @include onTablet--m {
+      height: 360px;
     }
   }
 
