--- a/src/components/MentalState/MentalState.scss
+++ b/src/components/MentalState/MentalState.scss
@@ -2,7 +2,13 @@
 @import '../../styles/utils/mixins';
 
 .mental-state {
+& .participants__description {
+  margin: 0 0 24px;
+  text-align: center;
+}
+
   &__content {
+    margin: 0 0 24px;
     display: flex;
     flex-direction: column;
 
@@ -12,42 +18,71 @@
     }
 
     @include onDesktop {
+      margin: 0 0 40px;
       flex-direction: row;
       justify-content: center;
       align-items: stretch;
     }
   }
 
-  &__item-description {
+  &__container {
+    padding: 16px 24px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+
+    background-color: $colorDarkGreen;
     border-radius: 24px;
-    padding: 24px;
-    background-color: $colorBeige;
+
+    @include onDesktop {
+      padding: 40px 50px;
+    }
+  }
+
+  &__item-description {
+margin: 0 0 24px;
+
     display: flex;
     align-items: center;
+    order: -1;
 
-    text-align: center;
-    font-size: 24px;
+    font-size: 14px;
     line-height: 1.5;
-    font-weight: 500;
+    font-weight: 600;
+    text-align: center;
 
     color: $colorDarkGreen;
 
-    @include onDesktop {
-      justify-content: center;
-      font-size: 30px;
+    @include onTablet--s {
+      font-size: 20px;
+    }
+
+    @include onTablet--m {
+      margin: 0 0 24px;
+      order: -1;
     }
 
     @include onDesktop {
-      justify-content: center;
-      font-size: 30px;
+      order: 0;
+      margin: 0;
+
+      font-size: 32px;
+      font-weight: 500;
     }
+
 
     &--last {
       flex-direction: column;
-      font-size: 18px;
+      justify-content: center;
+      font-size: 14px;
+
+      @include onTablet--s {
+        font-size: 18px;
+      }
 
       @include onTablet--m {
-        font-size: 18px;
+        font-size: 24px;
       }
 
       @include onDesktop {
@@ -55,10 +90,42 @@
       }
 
       & span {
-        font-weight: 700;
+        // margin: 0 0 24px;
+        font-weight: 600;
+
+        @include onTablet--m {
+          font-size: 22px;
+        }
+
+        @include onDesktop {
+          font-size: 34px;
+        }
+
       }
     }
   };
+
+  &__legend-description {
+    font-size: 18px;
+
+    text-align: center;
+    @include onDesktop {
+      margin: 0 0 24px;
+      font-size: 24px;
+
+    }
+  }
+
+  &__description--middle {
+    color: $colorGoldLight;
+    text-align: center;
+    font-size: 18px;
+
+
+    @include onDesktop {
+      font-size: 32px;
+    }
+  }
 
   &__list-container {
     display: flex;
@@ -73,6 +140,10 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+
+    @include onDesktop {
+      margin: 0;
+    }
   }
 
   &__list-item {
@@ -82,6 +153,10 @@
 
     display: flex;
     gap: 8px;
+
+    @include onDesktop {
+      font-size: 18px;
+    }
 
     &--state {
       display: flex;
@@ -143,13 +218,20 @@
   }
 
   &__image {
-    margin: 0 0 24px;
     display: flex;
     align-items: center;
     justify-content: center;
 
+    @include onTablet--s {
+      margin: 0;
+    }
+
     @include onTablet--m {
       align-items: center;
+    }
+
+    @include onDesktop {
+      margin: 0;
     }
 
     & img {
@@ -171,12 +253,17 @@
   }
 
   &__girls-images {
+    border-radius: 24px;
+    padding: 8px 12px;
+    background-color: $colorBeige;
+
     justify-content: center;
 
-    @include onTablet--m {
-      flex-wrap: nowrap;
+    @include onTablet--s {
+      padding: 24px 48px;
     }
     @include onDesktop {
+      flex-wrap: nowrap;
       gap: 40px;
     }
   }
