--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,9 @@
 @import 'utils/reset';
 @import 'utils/mixins';
 @import 'utils/normalize';
+@import 'utils/noselect';
 @import 'blocks/page';
 @import 'blocks/section';
-// @import 'blocks/container';
 @import 'blocks/carousel';
 @import 'blocks/button';
 @import 'blocks/therapist';
