--- a/src/components/HomeBanner/HomeBanner.scss
+++ b/src/components/HomeBanner/HomeBanner.scss
@@ -19,8 +19,14 @@
     }
 
     @include onDesktop {
+      background-position: top 35% left 55%;
+    }
+
+    @include onDesktop--xxl {
       background-position: center;
       background-image: url('/images/home/home--desktop.jpg');
+      // height: 1100px;
+      background-position: top 20% left 55%;
     }
 
   }
