--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -30,7 +30,7 @@
       width: 36px;
       background-image: url('/images/decor/leaf-green.png');
 
-      top: 2px;
+      // top: 2px;
       background-size: contain;
       background-position: center;
 
