--- a/src/components/SupportUs/SupportUs.scss
+++ b/src/components/SupportUs/SupportUs.scss
@@ -2,5 +2,76 @@
 @import '../../styles/utils/mixins';
 
 .support-us {
+  & .section__description {
+    margin: 0 0 48px;
+    font-size: 24px;
+    line-height: 1.5;
 
+    @include onTablet--m {
+      font-size: 28px;
+    }
+
+    @include onDesktop {
+      margin: 0 0 50px;
+      font-size: 30px;
+    }
+  }
+
+  &__icon {
+    fill: $colorBeige;
+    transition: all 0.3s linear;
+    height: 60px;
+    width: 60px;
+
+    @include onTablet--s {
+      height: 60px;
+      width: 60px;
+    }
+
+    @include onTablet--m {
+    }
+
+    @include onDesktop {
+      padding: 10px;
+      border-radius: 50%;
+      height: 120px;
+      width: 120px;
+    }
+  }
+
+  & .button {
+    padding: 0 40px;
+    display: flex;
+    gap: 20px;
+    width: 320px;
+    height: 80px;
+    font-size: 24px;
+
+    box-shadow: 0px 0px 45px $colorGoldLight;
+
+    @include onTablet--s {
+      font-size: 24px;
+    }
+
+    @include onTablet--m {
+
+    }
+
+    @include onDesktop {
+      border-radius: 100px;
+
+      width: 440px;
+      font-size: 30px;
+      height: 110px;
+    }
+
+    &:hover {
+      gap:0;
+    }
+
+    &:hover > svg {
+      fill: $colorDarkGreen;
+      transform: scale(1.1);
+    }
+  }
 }
