removed parralax background

--- a/src/components/JoinProgram/JoinTheProgram.scss
+++ b/src/components/JoinProgram/JoinTheProgram.scss
@@ -4,7 +4,7 @@
 .join-the-program {
   background-image: url('/images/program/ukrainian-field.jpg');
   background-size: cover;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 24px;
