--- a/src/components/HomeBanner/HomeBanner.scss
+++ b/src/components/HomeBanner/HomeBanner.scss
@@ -9,10 +9,8 @@
     height: calc(100vh - 60px);
 
     background-image: url('/images/home/home--mobile.jpg');
-    background-size: cover;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center left 53%;
@@ -28,7 +26,7 @@
     @include onDesktop--xxl {
       background-position: center;
       background-image: url('/images/home/home--desktop.jpg');
-      
+
       background-position: top 35% left 55%;
     }
 
