--- a/src/components/JoinProgram/JoinTheProgram.scss
+++ b/src/components/JoinProgram/JoinTheProgram.scss
@@ -4,18 +4,24 @@
 .join-the-program {
   background-image: url('/images/program/ukrainian-field.jpg');
   background-size: cover;
-  // background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 24px;
   height: 600px;
 
-  & .section__title {
+&__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  width: 100%;
-  border-radius: 12px;
-  background-color: $colorBeige;
-  box-shadow: 2px 2px 8px $colorDarkGreen;
+  & .section__title {
+    margin: 0 auto 40px;
+    width: 100%;
+    border-radius: 12px;
+    background-color: $colorBeige;
+    box-shadow: 2px 2px 8px $colorDarkGreen;
 
   @include onTablet--s {
       padding: 12px 40px;
