--- a/src/components/JoinProgram/JoinTheProgram.scss
+++ b/src/components/JoinProgram/JoinTheProgram.scss
@@ -2,19 +2,26 @@
 @import '../../styles/utils/mixins';
 
 .join-the-program {
+  display: flex;
+
+  & .container {
+    display: flex;
+    flex-direction: column;
+  }
+
   background-image: url('/images/program/ukrainian-field.jpg');
   background-size: cover;
-  background-attachment: fixed;
+
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 24px;
-  height: 600px;
 
-&__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
 
   & .section__title {
     margin: 0 auto 40px;
@@ -23,7 +30,7 @@
     background-color: $colorBeige;
     box-shadow: 2px 2px 8px $colorDarkGreen;
 
-  @include onTablet--s {
+    @include onTablet--s {
       padding: 12px 40px;
     }
 
@@ -50,20 +57,16 @@
     font-weight: 600;
 
     @include onTablet--s {
-      margin: 0 0 100px;
+      margin: 0 0 64px;
     }
 
     @include onTablet--m {
       padding: 12px 20px;
       font-size: 30px;
-      margin: 0 0 64px;
     }
 
     @include onDesktop {
-      margin: 0 0 64px;
       padding: 20px 40px;
-      font-size: 30px;
-
     }
   }
 
@@ -72,16 +75,10 @@
     height: 60px;
     width: 170px;
 
-    &:hover {
-      transform: scale(1.03);
-    }
-
-
     @include onDesktop {
       font-size: 40px;
       height: 60px;
       width: 220px;
     }
-
   }
 }
