--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import 'utils/normalize';
 @import 'utils/noselect';
 @import 'blocks/page';
+@import 'blocks/top-actions';
 @import 'blocks/section';
 @import 'blocks/carousel';
 @import 'blocks/button';
