changed color of langSelector buttons

--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -40,20 +40,37 @@
     display: flex;
     gap: 12px;
 
+    margin: 0 0 24px;
     justify-content: center;
+    align-items: center;
+    color: $colorDarkGreen;
+    font-size: 20px;
   }
 
   &__lang-btn {
-    margin: 0 0 24px;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 600;
     color: $colorDarkGreen;
+
+    border: 1px solid transparent;
+
+    height: 54px;
+    width: 54px;
+    border-radius: 50%;
+
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      color: $colorBeige;
+      border-color: $colorDarkGreen;
+      background-color: $colorDarkGreen;
+    }
   }
 
   &__menu-list {
     font-size: 24px;
     margin-left: 20px;
-    gap: 8px;
+    gap: 14px;
     font-weight: 500;
 
     display: flex;
@@ -68,8 +85,8 @@
   }
 
   &__nav-link {
-    padding: 12px 14px;
-    border: 1px solid $colorDarkGreen;
+    padding: 6px 14px;
+    border: 1px solid transparent;
     border-radius: 50px;
     color: $colorDarkGreen;
     display: flex;
