--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -80,8 +80,6 @@
   &__list-item {
     color: $colorDarkGreen;
     display: flex;
-
-
   }
 
   &__nav-link {
@@ -105,5 +103,27 @@
       cursor: none;
       pointer-events: none;
     }
+  }
+}
+
+.is-active {
+  display: flex;
+  position: relative;
+
+  &--lang {
+    background-color: $colorDarkGreen;
+    color: $colorBeige;
+  }
+  &:before {
+    position: absolute;
+    top: 50%;
+    left: -4px;
+    transform: translateY(-50%);
+
+    content: '';
+    height: 8px;
+    width: 8px;
+    background-color: $colorDarkGreen;
+    border-radius: 50%;
   }
 }
