added multilang to entire project

--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -112,8 +112,9 @@
 
   &--lang {
     background-color: $colorDarkGreen;
-    color: $colorBeige;
+    color: $colorGoldLight;
   }
+
   &:before {
     position: absolute;
     top: 50%;
