--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -46,7 +46,6 @@
     }
 
     @include onTablet--s {
-
       width: 100%;
       order: 1;
       background-size: contain;
@@ -115,6 +114,20 @@
 
       @include onDesktop {
       }
+
+      &_ua {
+        line-height: 38px;
+        font-size: 38px;
+        @include onTablet--s {
+          font-size: 30px;
+          line-height: 30px;
+        }
+
+        @include onTablet--m {
+          font-size: 38px;
+          line-height: 38px;
+        }
+      }
     }
 
     &--bottom {
@@ -125,6 +138,21 @@
       @include onTablet--m {
         font-size: 72px;
         line-height: 72px;
+      }
+
+      &_ua {
+        font-size: 80px;
+        line-height: 60px;
+
+        @include onTablet--s {
+          font-size: 64px;
+          line-height: 50px;
+        }
+
+        @include onTablet--m {
+          font-size: 80px;
+          line-height: 60px;
+        }
       }
     }
   }
@@ -155,6 +183,7 @@
 
     &--top {
       margin: 0 0 4px;
+      letter-spacing: 1px;
 
       @include onTablet--s {
         letter-spacing: 1px;
@@ -164,12 +193,17 @@
         font-size: 16px;
         letter-spacing: 2.9px;
       }
+
+      &_ua {
+        letter-spacing: 0.4px;
+      }
     }
 
     &--bottom {
       margin: 0 0 16px;
       font-weight: 400;
       line-height: 100%;
+      letter-spacing: 3.8px;
 
       @include onTablet--s {
         margin: 0;
