--- a/src/components/AboutCenter/AboutCenter.scss
+++ b/src/components/AboutCenter/AboutCenter.scss
@@ -3,7 +3,6 @@
 
 .about-center {
   &__content {
-
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -12,6 +11,12 @@
     @include onDesktop {
       flex-direction: row;
     }
+  }
+
+  &__text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
   }
 
   &__text {
@@ -34,7 +39,6 @@
       margin: 0 auto;
       width: 400px;
     }
-
   }
   & img {
     border-radius: 24px;
@@ -42,6 +46,5 @@
     background-color: $colorBeige;
     object-fit: cover;
     object-position: center;
-
   }
 }
