--- a/src/components/HomeBanner/HomeBanner.scss
+++ b/src/components/HomeBanner/HomeBanner.scss
@@ -8,7 +8,6 @@
     width: 100%;
     height: calc(100vh - 60px);
 
-
     background-image: url('/images/home/home--mobile.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -16,7 +15,6 @@
     background-position: center left 53%;
 
     @include onTablet--s {
-
       background-position: center left 55%;
     }
 
@@ -33,7 +31,6 @@
     @include onDesktop--xxl {
       background-position: top 35% left 55%;
     }
-
   }
 
   &__text-container {
@@ -44,8 +41,7 @@
     right: 0;
 
     @include onTablet--s {
-      top: 50%
-
+      top: 50%;
     }
 
     @include onDesktop {
@@ -72,7 +68,7 @@
     font-size: 50px;
     letter-spacing: 8px;
 
-   /*  background-image: url('/images/home/title-o.png');
+    /*  background-image: url('/images/home/title-o.png');
     background-size: 40px;
     background-position: left 188px top 9px; */
 
@@ -85,7 +81,6 @@
       letter-spacing: 8px;
     }
 
-
     & img {
       flex-shrink: 0;
 
@@ -96,14 +91,11 @@
       background-repeat: no-repeat;
       background-position: left 2px top 9px;
 
-
       @include onTablet--s {
         margin: 12px 5px 0 0;
         width: 50px;
         height: 50px;
       }
-
-
     }
   }
 
@@ -111,12 +103,16 @@
     color: $colorDarkGreen;
     letter-spacing: 9px;
 
-    &--ua {
-      letter-spacing: 6px;
+    @include onTablet--s {
+      letter-spacing: 13.2px;
     }
 
-    @include onTablet--s {
-      letter-spacing: 13.8px;
+    &--ua {
+      letter-spacing: 6px;
+
+      @include onTablet--s {
+        letter-spacing: 9.9px;
+      }
     }
   }
 }
