--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import 'utils/reset';
 @import 'utils/mixins';
 @import 'utils/normalize';
-@import 'utils/noselect';
+// @import 'utils/noselect';
 @import 'blocks/page';
 @import 'blocks/top-actions';
 @import 'blocks/section';
