--- a/src/components/LanguageSelector/LanguageSelector.scss
+++ b/src/components/LanguageSelector/LanguageSelector.scss
@@ -7,13 +7,13 @@
   @include onTablet--m {
     display: flex;
     gap: 8px;
-}
+  }
 
   &__toggler-window {
     align-self: center;
     position: relative;
-    width: 32px;
-    height: 18px;
+    width: 35px;
+    height: 20px;
 
     border-radius: 50px;
     background-color: $colorBeige;
@@ -26,16 +26,17 @@
     width: 18px;
     background-color: $colorGold;
     border-radius: 50%;
-    left: 0;
+    top: 1px;
+    left: 1px;
 
-    transition: transform 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
 
     &--lang-en {
       transform: translateX(0);
     }
 
     &--lang-ua {
-      transform: translateX(14px);
+      transform: translateX(15px);
     }
   }
 
@@ -43,5 +44,13 @@
     color: $colorBeige;
     font-size: 18px;
     font-weight: 400;
+
+    opacity: 0.5;
+
+    transition: opacity 0.23s ease-in-out;
+
+    &--active {
+      opacity: 1;
+    }
   }
 }
