--- a/src/components/Concepts/Concepts.scss
+++ b/src/components/Concepts/Concepts.scss
@@ -1,6 +1,12 @@
 @import '../../styles/utils/mixins';
 @import '../../styles/utils/vars';
 
+.concepts {
+  &__description {
+    font-size: 24px;
+  }
+}
+
 .concept {
   &__list {
     padding: 40px 12px 0;
@@ -73,9 +79,4 @@
     text-align: center;
     font-size: 14px;
   }
-}
-
-.example {
-  height: 100px;
-  width: 100px;
 }
