--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -14,24 +14,22 @@
     @include onDesktop {
       width: 70%;
     }
-
   }
 
   &__project-description {
     margin: 0 auto 36px;
     font-size: 24px;
     line-height: 1.5;
-    text-align: center;
+    text-align: justify;
     width: 70%;
   }
 
   &__uc-button-more {
-   margin: 0 auto;
-   border-color: $colorBeige;
+    margin: 0 auto;
+    border-color: $colorBeige;
   }
 
   &__past-project {
     margin: 0 0 48px;
-   }
-
+  }
 }
