--- a/src/components/AboutUC/AboutUC.scss
+++ b/src/components/AboutUC/AboutUC.scss
@@ -9,7 +9,7 @@
     font-weight: 400;
     margin: 0;
 
-    text-align: center;
+    text-align: justify;
 
     & span {
       font-weight: 700;
@@ -53,7 +53,6 @@
       font-weight: 700;
       color: #fff;
 
-
       border-radius: 8px;
       float: left;
       box-shadow: 2px 2px 4px #333;
@@ -66,7 +65,7 @@
     }
 
     &:nth-child(1) &--state {
-      background-color: #A05E02;
+      background-color: #a05e02;
     }
 
     &:nth-child(2) &--state {
@@ -74,21 +73,21 @@
     }
 
     &:nth-child(3) &--state {
-      background-color: #ECC064;
+      background-color: #ecc064;
       color: #074030;
     }
 
     &:nth-child(4) &--state {
-      background-color: #15694F;
+      background-color: #15694f;
     }
 
     &:nth-child(5) &--state {
-      background-color: #B88744;
+      background-color: #b88744;
     }
 
     &:nth-child(6) &--state {
-      background-color: #F7F0E8;
-      color: #2B2B2A;
+      background-color: #f7f0e8;
+      color: #2b2b2a;
     }
   }
 
@@ -109,7 +108,6 @@
       object-fit: cover;
       object-position: left;
     }
-
 
     &--girl-sad {
       background-image: url('/images/about/about--girl-sad.png');
