--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,13 @@
 @import 'utils/reset';
 @import 'utils/mixins';
 @import 'utils/normalize';
-// @import 'utils/noselect';
+@import 'utils/noselect';
 @import 'blocks/page';
 @import 'blocks/top-actions';
 @import 'blocks/section';
 @import 'blocks/carousel';
 @import 'blocks/button';
 @import 'blocks/therapist';
-
 
 .text {
   &-align {
@@ -17,3 +16,4 @@
     }
   }
 }
+ 
