--- a/src/components/MentalState/MentalState.scss
+++ b/src/components/MentalState/MentalState.scss
@@ -2,6 +2,7 @@
 @import '../../styles/utils/mixins';
 
 .mental-state {
+
 & .participants__description {
   margin: 0 0 24px;
   text-align: center;
@@ -32,13 +33,17 @@
     flex-direction: column;
     gap: 60px;
 
-    background-color: $colorDarkGreen;
     border-radius: 24px;
 
-    @include onDesktop {
-      padding: 40px 50px;
+      @include onDesktop {
+      padding: 60px 20px;
     }
   }
+
+  &__girls-pictures {
+    background-color: $colorDarkGreen;
+  }
+
 
   &__item-description {
 margin: 0 0 24px;
