--- a/src/pages/MeetingWithTheSoulPage/MeetingWithTheSoulPage.scss
+++ b/src/pages/MeetingWithTheSoulPage/MeetingWithTheSoulPage.scss
@@ -61,6 +61,8 @@
   &__description {
     font-size: 24px;
     font-weight: 500;
+    text-align: justify;
+
   }
 
   &__gallery {
@@ -81,6 +83,25 @@
     @include onTablet--m {
       display: none;
     }
+
+    &--desktop {
+      display: none;
+      @include onTablet--m {
+        display: block;
+        width: 100%;
+      }
+    }
+  }
+
+  &__carousel-items-container {
+    &--desktop {
+      @include onTablet--m {
+        padding: 0 30px;
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+      }
+    }
   }
 
   &__carousel.carousel.carousel-dark .carousel-indicators > button {
@@ -93,7 +114,7 @@
 
     @include onTablet--m {
       gap: 20px;
-      width: 210px;
+      width: 200px;
     }
 
     @include onDesktop {
@@ -119,12 +140,16 @@
       margin: 0 auto;
       width: 300px;
       height: 400px;
+
+      @include onDesktop {
+        display: flex;
+      }
     }
   }
 
   &__gallery-image {
     width: 100%;
-    max-height: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
     border-radius: 24px;
