--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -15,6 +15,7 @@
   }
 
   &__section {
+    // margin: 0 0 40px;
     &--bgc-green {
       background-color: $colorDarkGreen;
       color: $colorBeige;
