--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,4 +5,8 @@ $colorBeige: #f7f0e8;
 $colorBeigeDark: #e8ded2;
 $colorGoldLight: #eccb80;
 $colorGold: #b88744;
-$colorGoldDark:#D89d4c;
+$colorGoldDark: #d89d4c;
+$colorTelegramPrimaryBlue: #62909e;
+$colorTelegramBackgroundBlue: #e6f3f9;
+$colorTelegramPrimaryGreen: #6f925f;
+$colorTelegramBackgroundGreen: #f0fddf;
