--- a/src/components/LanguageSelector/LanguageSelector.scss
+++ b/src/components/LanguageSelector/LanguageSelector.scss
@@ -12,7 +12,7 @@
     align-items: center;
 
     & button {
-      color: $colorDarkGreen;
+      // color: $colorDarkGreen;
       font-size: 20px;
       text-transform: uppercase;
     }
