--- a/src/pages/AboutUsPage/AboutUsPage.scss
+++ b/src/pages/AboutUsPage/AboutUsPage.scss
@@ -25,7 +25,6 @@
     font-weight: 600;
     letter-spacing: 1px;
 
-    // width: 80%;
     max-width: 600px;
     text-align: center;
 
@@ -59,6 +58,8 @@
 
     &-text {
       font-size: 24px;
+      line-height: 1.25;
+      text-align: justify;
     }
 
     &-documents-container {
@@ -68,6 +69,97 @@
 
     &-documents {
       width: 100%;
+    }
+  }
+
+  &__goal {
+    &-content {
+      display: flex;
+      flex-direction: row;
+      gap: 40px;
+    }
+
+    &-img-container {
+      flex-shrink: 0;
+    }
+
+    &-img {
+      border-radius: 24px;
+    }
+
+    &-text-container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+
+      text-align: justify;
+    }
+
+    &-text {
+      font-size: 24px;
+      line-height: 1.25;
+    }
+  }
+
+  &__activities {
+    &-content {
+    }
+
+    &-text {
+      margin: 0 0 24px;
+
+      font-size: 24px;
+      line-height: 1.25;
+
+      &--last {
+        margin: 0;
+      }
+    }
+    &-carousel {
+      &-item-content {
+        margin: 0 auto;
+        max-width: 1040px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      &-item-img {
+        border-radius: 24px;
+        height: 200px;
+      }
+    }
+  }
+
+  &__gallery {
+    // margin: 0 0 24px;
+    padding: 50px 0;
+  }
+
+  &__plans {
+    font-size: 18px;
+
+    &-list {
+      margin: 0 0 25px;
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
+
+    &-item {
+      &::before {
+        margin: 0 16px 0 0;
+        content: '';
+        display: inline-flex;
+        height: 16px;
+        width: 16px;
+        border-radius: 50%;
+        background-color: $colorGold;
+        color: red;
+      }
+    }
+
+    &-text {
     }
   }
 }
