--- a/src/pages/MeetingWithTheSoulPage/MeetingWithTheSoulPage.scss
+++ b/src/pages/MeetingWithTheSoulPage/MeetingWithTheSoulPage.scss
@@ -5,7 +5,7 @@
   position: relative;
 
   &__banner {
-    height: calc(100vh - 60px);
+    height: 600px;
     width: 100%;
 
     background-image: url('/images/projects/meeting-with-the-Soul--banner.jpg');
