--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -66,7 +66,7 @@
     &--burger-menu {
       background-image: url('/images/header/header-burger--mobile.svg');
 
-      @include onTablet--m {
+      @include onDesktop {
         display: none;
       }
     }
